<resources>
    <string name="app_name">Brother Print SDK Demo</string>
    <string name="app_version">APP version:</string>
    <string name="sdk_version">SDK Version:</string>
    <string name="cancel">Cancel</string>

    <string name="clear">Clear</string>
    <string name="select_printer_message">Please select a Printer</string>
    <string name="search_printer">Search Printer</string>
    <string name="print_setting">Print Setting</string>
    <string name="printer">Printer</string>

    <string name="about_info">information</string>
    <string name="print_image">Print Image</string>
    <string name="print_pdf">Print PDF</string>
    <string name="template_print">Template Print</string>
    <string name="transfer_files">Transfer Files</string>
    <string name="printer_info">Printer Info</string>
    <string name="model_spec">ModelSpec</string>
    <string name="validate">Validate</string>
    <string name="file_analyze">FileAnalyze</string>

    <string name="select_printer_interface">Select interface</string>
    <string name="network">Network</string>
    <string name="classic_bluetooth">Bluetooth</string>
    <string name="bluetooth_low_energy">Bluetooth Low Energy</string>
    <string name="usb">USB</string>

    <string name="print_template">printTemplate(key, printSettings, replacers)</string>
    <string name="remove_template_with_key">removeTemplateWithKeys(keys)</string>
    <string name="remove_template_key_title">Remove Template</string>
    <string name="remove_template_key_hint">Key to remove:</string>
    <string name="remove">Remove</string>
    <string name="next">Next</string>
    <string name="template_key">TemplateKey:</string>
    <string name="encoding">Encoding:</string>
    <string name="skip">Skip</string>
    <string name="edit_text">Text</string>
    <string name="edit_index">Index</string>
    <string name="edit_object">ObjectName</string>
    <string name="add_object">Add</string>
    <string name="delete_object">Delete</string>
    <string name="next_template">Next Template</string>
    <string name="data_input">Input Data:</string>
    <string name="error_input">wrong input</string>
    <string name="error_destination">errorDestination</string>
    <string name="msg_title_warning">Warning</string>
    <string name="request_template_info_list">requestTemplateInfoList</string>
    <string name="get">Get</string>
    <string name="delete">Delete</string>
    <string name="input_numbers_with_separated">input numbers with ; separated</string>
    <string name="printer_model">PrinterModel</string>
    <string name="label_size">LabelSize</string>
    <string name="paper_size">PaperSize</string>
    <string name="auto_cut">Auto Cut</string>
    <string name="cut_at_end">CutAtEnd</string>
    <string name="resolution">Resolution</string>
    <string name="auto_cut_for_each_page_count">AutoCutForEachPageCount</string>
    <string name="channel_type">ChannelType</string>
    <string name="bi_color_blue_enhancement">BiColorRedEnhancement</string>
    <string name="bi_color_green_enhancement">BiColorGreenEnhancement</string>
    <string name="bi_color_red_enhancement">BiColorBlueEnhancement</string>
    <string name="work_path">WorkPath</string>
    <string name="custom_record">CustomRecord</string>
    <string name="scale_mode">ScaleMode</string>
    <string name="scale_value">ScaleValue</string>
    <string name="orientation">Orientation</string>
    <string name="halftone">Halftone</string>
    <string name="horizontal_alignment">HorizontalAlignment</string>
    <string name="vertical_alignment">VerticalAlignment</string>
    <string name="compress_mode">CompressMode</string>
    <string name="halftone_threshold">HalftoneThreshold</string>
    <string name="num_copies">NumCopies</string>
    <string name="skip_status_check">SkipStatusCheck</string>
    <string name="print_quality">printQuality</string>
    <string name="cutmark_print">CutmarkPrint</string>
    <string name="cut_pause">CutPause</string>
    <string name="half_cut">HalfCut</string>
    <string name="chain_print">ChainPrint</string>
    <string name="special_tape_print">SpecialTapePrint</string>
    <string name="force_vanishing_margin">ForceVanishingMargin</string>
    <string name="paper_type">PaperType</string>
    <string name="paper_insertion_position">PaperInsertionPosition</string>
    <string name="feed_mode">FeedMode</string>
    <string name="extra_feed_dots">ExtraFeedDots</string>
    <string name="density">Density</string>
    <string name="roll_case">RollCase</string>
    <string name="print_speed">PrintSpeed</string>
    <string name="using_carbon_copy_paper">UsingCarbonCopyPaper</string>
    <string name="print_dash_line">PrintDashLine</string>
    <string name="force_stretch_printable_area">ForceStretchPrintableArea</string>
    <string name="feed_direction_margins">FeedDirectionMargins</string>
    <string name="trim_trailing_blank_data">TrimTrailingBlankData</string>
    <string name="custom_paper_size">CustomPaperSize</string>
    <string name="peel_label">PeelLabel</string>
    <string name="rotate180degrees">Rotate180Degrees</string>
    <string name="mirror_print">MirrorPrint</string>
    <string name="rotation">Rotation</string>
    <string name="in_app_folder">In-app folder</string>
    <string name="external_folder">External folder</string>
    <string name="print">Print</string>
    <string name="no_select_printer">Printer is not selected</string>
    <string name="waiting">Waiting&#8230;</string>
    <string name="canceling">Canceling&#8230;</string>
    <string name="template_name">Template Name</string>
    <string name="template_file_size">File Size</string>
    <string name="template_modified_date">Modified Date</string>

    <string name="official_api">Official APIs</string>
    <string name="brother_api">APIs for Brother app only</string>
    <string name="request_firm_version">requestMainFirmVersion</string>
    <string name="request_serial_number">requestSerialNumber</string>
    <string name="get_status">getStatus</string>
    <string name="request_system_report">requestSystemReport</string>
    <string name="request_media_version">requestMediaVersion</string>
    <string name="request_bluetooth_firm_version">requestBluetoothFirmVersion</string>
    <string name="request_internal_model_flag">requestInternalModelFlag</string>
    <string name="request_is_boot_mode">requestIsBootMode</string>
    <string name="request_battery">requestBattery</string>
    <string name="analyze_pd3">analyzePD3</string>

    <string name="get_configuration">getPrinterSettings(keys, configurationMap)</string>
    <string name="set_configuration">updatePrinterSettings(configurationMap)</string>
    <string name="request_configuration">requestPrinterConfig(RequestOrder)</string>
    <string name="update_configuration">updatePrinterConfig(UpdateOrder)</string>
    <string name="set">Set</string>
    <string name="request_template">requestTemplateList</string>
    <string name="net_bootmode">NET_BOOTMODE</string>
    <string name="net_interface">NET_INTERFACE</string>
    <string name="battery_health_excellent">Excellent</string>
    <string name="battery_health_good">Good</string>
    <string name="battery_health_replace_soon">Replace Soon</string>
    <string name="battery_health_replace_battery">Replace Battery</string>
    <string name="battery_health_not_installed">Not Installed</string>
    <string name="text_no_data">(NO DATA)</string>
    <string name="data_no_change">(NO CHANGE)</string>
    <string name="bt_ssp_setting">BT_SSP</string>
    <string name="bt_power_save_mode_setting">BT_POWER_SAVE_MODE</string>
    <string name="error_configure">ConfigurationError</string>
    <string name="error_bluetooth_preference">BluetoothPreferenceError</string>
    <string name="error_not_select_configuration">Please select configurations</string>
    <string name="disable">Disable</string>
    <string name="enable">Enable</string>
    <string name="config_auto">AUTO</string>
    <string name="config_static">STATIC</string>
    <string name="config_on">On</string>
    <string name="config_off">Off</string>
    <string name="keep_current_state">Keep current state</string>

    <string name="transferFirmwareFiles">transferFirmwareFiles(paths, progressCallback)</string>
    <string name="transferTemplateFiles">transferTemplateFiles(paths, progressCallback)</string>
    <string name="transferDatabaseFiles">transferDatabaseFiles(paths, progressCallback)</string>
    <string name="transferBinaryFiles">transferBinaryFiles(paths, progressCallback)</string>
    <string name="transferBinaryData">transferBinaryData(data, progressCallback)</string>

    <string name="result">Result</string>
    <string name="spec_xdpi">Xdpi</string>
    <string name="spec_ydpi">Ydpi</string>
    <string name="spec_series_code">SeriesCode</string>
    <string name="spec_model_code">ModelCode</string>
    <string name="spec_pt_label_supported">SupportedPTLabels</string>
    <string name="spec_ql_label_supported">SupportedQLLabels</string>

    <string name="print_PDF_with_URL">printPDF(PDFPath, printSettings)</string>
    <string name="print_PDF_with_URLs">printPDF(PDFPathList, printSettings)</string>
    <string name="print_PDF_with_URL_pages">printPDF(PDFPath, pages, printSettings)</string>

    <string name="print_image_with_image">printImage(bitmap, printSettings)</string>
    <string name="print_image_with_URL">printImage(imagePath, printSettings)</string>
    <string name="print_image_with_URLs">printImage(imagePathList, printSettings)</string>
    <string name="print_image_with_Closures">printImageWithClosure(closures, printSettings)</string>
    <string name="print_PRN_with_URL">sendPRNFile(PRNFilePath)</string>
    <string name="print_PRN_with_URLs">sendPRNFile(PRNFilePathList)</string>
    <string name="print_PRN_with_data">sendRawData(data)</string>
    <string name="unsupported_file">Unsupported File</string>
    <string name="transfer">Transfer</string>

    <string name="not_find_data">cannot find any printer</string>
    <string name="wifi_off">WiFi OFF. Please open wifi for searching printers</string>
    <string name="wifi_not_connect">WiFi not connected. Please connect your ssid for searching printers</string>
    <string name="bluetooth_off">Bluetooth OFF. Please open Bluetooth for searching printers</string>
    <string name="usb_permission">USB Device Connect Permission</string>
    <string name="no_permission">Cannot continue without permission:</string>
    <string name="determine_model">Model Determination</string>
    <string name="button_ok">OK</string>

    <string name="error_invalidate_input">Invalidate input string</string>
    <string name="print_message">printing&#8230;</string>
    <string name="create_channel_error">Create Channel Error</string>
    <string name="no_print_data">No Print Data</string>
    <string name="no_print_settings">PrintSettings is null</string>
    <string name="canceled_before_print">Canceled before printing.</string>
    <string name="wrong_print_data_type">wrong print data type</string>
    <string name="value">Value</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>