<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/printer_settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.PrintSettingsFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/colorBackground"
                    app:menu="@menu/toolbar_settings"
                    app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                    app:title="@string/print_setting" />

            </FrameLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <RelativeLayout
            android:id="@+id/layout_print_settings_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/print_settings_menu_recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/validate" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/validate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_margin="16dp"
                android:background="@drawable/button_border_bg"
                android:text="@string/validate" />

        </RelativeLayout>

        <FrameLayout
            android:id="@+id/layout_empty_page"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:background="@color/colorBackground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/no_select_printer"
                />
        </FrameLayout>
    </LinearLayout>
</layout>
