<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="bean"
            type="com.brother.ptouch.sdk.printdemo.viewmodel.SelectorWithSearchViewModel.DisplayBean" />

        <import type="android.view.View" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/colorBackground"
                    app:navigationIcon="@drawable/ic_baseline_arrow_back_24" />
            </FrameLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/main_printer_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:padding="16dp"
                android:text="@string/select_printer_message"
                android:visibility="@{bean.title.empty ? View.VISIBLE : View.GONE}" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:visibility="@{bean.title.empty ? View.GONE : View.VISIBLE}">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/printer" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{bean.title}" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{bean.subTitle}" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/main_find_printer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_border_bg"
                android:drawableEnd="@drawable/ic_baseline_chevron_right_24"
                android:gravity="start|center_vertical"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"
                android:text="@string/search_printer"
                android:textAllCaps="false" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/base_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</layout>
